@@ -14,8 +14,10 @@
 	* inst/tinytest/test_exceptions_nocall.R: Idem
 	* inst/tinytest/test_expose_class.R: Idem
 	* inst/tinytest/test_function.R: Idem
-	* inst/tinytest/test_interface.R: Idem
-
+	* inst/tinytest/test_interface.R: Idem (but inactive for now)
+	* inst/tinytest/test_internal_function.R: Idem
+	* inst/tinytest/test_internal_function_cpp11.R: Idem
+	
 2019-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docker/ci/Dockerfile: Add tinytest to ci Docker image
